# phydra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  about.rst  about.rtf  conf.py  example.ipynb  make.bat
examples/: BasePrototype_model.ipynb  Bootstrap_model.ipynb  Chemostat_Migrate2XSO_Test.ipynb  GridXY_Chemostat_example.ipynb  NPZD_Slab_ModelApplication_2.ipynb  NP_Chemostat_ModelApplication_1.ipynb  NPxZx_SizeBased.ipynb  New_NPZD_slab.ipynb  OLD_ZeroD_NPZD_Slab_model.ipynb  OLD_ZeroD_NPxZx_Chemostat_model.ipynb  Untitled.ipynb  ZeroD_NPZD_Slab_model.ipynb  ZeroD_NPZD_Slab_model.ipynb.ipynb  ZeroD_NP_Chemostat_model.ipynb  ZeroD_NPxZx_Chemostat.ipynb  ZeroD_NPxZx_Chemostat_model.ipynb
notebooks/: 1_NP_Chemostat_ModelApplication.ipynb  2_NPZD_Slab_ModelApplication.ipynb  3_NPxZx_SizeBased_ModelApplication.ipynb  NPZD_Slab_ModelApplication_2.ipynb  NP_Chemostat_ModelApplication_1.ipynb  NPxZx_SizeBased.ipynb  README.md
phydra/: __init__.py  cli.py
prototypes/: 01_Chemostat_MODEL.ipynb  01_SimpleChemostat_Model.ipynb  02_2DChemostat_Model.ipynb  02_ASTroCAT_MODEL.ipynb  02_ASTroCAT_PLOT_OUTPUT.ipynb  02_Chemostat_furtherprototyping.ipynb  03_1D_NPZ_prototype.ipynb  03_2DChemostat_Model_gekko.ipynb  03_EMPOWER_MODEL.ipynb  03_flexible_dimensionality_tests.ipynb  BuildNewCore.ipynb  CREATE_phydra_SV_decorator.ipynb  FINALFINALupdate_ClearStruct.ipynb  FINAL_NPZD_prototype.ipynb  FINAL_NPxZxD_prototype.ipynb  GekkoCORE_final.ipynb  GekkoTest.ipynb  (+19 more)
(+112 files in other folders)
